# social-media-api

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose-dev.yml  docker-compose-prod.yml  gunicorn-api_example.service  main.py  pyproject.toml  requirements.txt
.github/workflows/: build-deploy.yml
alembic/: env.py
alembic/versions/: 5df57a9f2976_add_user_table.py  79e04655029c_create_post_table.py  7acdd5cb0fb4_add_last_few_columns_to_posts_table.py  92a2dfb28c35_add_centent_column_to_posts_table.py  ca8090c0c63f_auto_user_phone_number_column.py  cc1c96ff506a_add_foreign_key_to_posts_table.py  ec48bf4d3c26_auto_vote.py
app/: database.py  main.py  models.py  oauth2.py  schemas.py  utils.py
app/configs/: database.py  environment.py
app/models/: post.py  user.py  vote.py
app/routers/: auth.py  post.py  user.py  user_post.py  vote.py
app/routers/v1/: auth.py  post.py  user.py  vote.py
app/schemas/: auth.py  post.py  user.py  vote.py
app/utils/: auth.py  database.py  oauth2.py
assets/: api-test-insomnia-collection-v1.json
docs/: README.md  api-testing-collection-social-media.json
docs/production/: nginx_example.conf
tests/: conftest.py  database.py  helpers.py  test_calculations.py  test_posts.py  test_root.py  test_users.py  test_votes.py
tests/example/: calculations.py  test_calculations.py
tests/posts/: test_all_posts.py  test_create_post.py  test_delete_post.py  test_last_post.py  test_one_post.py  test_update_post.py
tests/users/: test_login_auth.py  test_users.py
tests/votes/: conftest.py  test_add_votes.py  test_delete_votes.py
