[tool.poetry]
name = "social-media-api"
version = "0.1.0"
description = "Social Media API using FastAPI (https://github.com/dotpep/social-media-api)"
authors = ["dotpep <pepelnine@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.109.2"}
psycopg2 = "^2.9.9"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
